# 0din-bot

./: .ebignore  .gitignore  Dockerfile  Dockerfile.test  Makefile  Procfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.ebextensions/: 01_uv.config
odinbot/: agent.py  bot.py  cli.py  tools.py
odinbot/tools/: date_utils.py  odin.py
scripts/: debug.py
tests/: conftest.py  test_agent.py  test_tools.py
