[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odinbot"
version = "0.1.0"
description = "A Discord bot that checks UUIDs in the ODIN Threatfeed API and can also analyze Discord messages"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.2",  # Discord bot functionality
    "httpx>=0.26.0",     # Async HTTP requests
    "loguru>=0.7.2",     # Logging
    "python-dotenv>=1.0.0",  # Environment variables
    "any-agent[all]>=0.22.0",  # Agent functionality with all extras
    "litellm>=1.30.7",   # LLM calls
    "fire>=0.5.0",       # CLI for agent
    "pydantic>=2.6.1",   # Data validation
    "click>=8.1.7",      # CLI framework
    "docker>=7.0.0"      # For MCPStdio tool
]

[project.scripts]
odinbot = "odinbot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["odinbot"]
exclude = ["logs", "*.log"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0"
] 